--- a/distribution/docs/src/main/resources/content/_developing/_devComponents/default-attribute-values.adoc
+++ b/distribution/docs/src/main/resources/content/_developing/_devComponents/default-attribute-values.adoc
@@ -48,7 +48,7 @@ The `metacardTypes` key is optional. If it is left out, then the default attribu
 [NOTE]
 ====
 In the event that an attribute has a 'global' default value as well as a default value for a specific metacard type, the default value for the specific metacard
-type is applied (i.e., the more specific default value wins).
+type is applied (the more specific default value wins).
 ====
 
 Example:
