--- a/distribution/docs/src/main/resources/content/_architectures/_plugins/metacardingest-network.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_plugins/metacardingest-network.adoc
@@ -32,8 +32,8 @@ Multiple instances of the plugin can be configured by clicking on its configurat
 Each instance represents a conditional statement, or a 'rule', that gets evaluated for each ingest request.
 For any request that meets the configured criteria of a rule, that rule attempts to transform its list of key-value pairs to become new attributes on all metacards in that request.
 
-The rule is divided into two fields: "Criteria" and "Expected Value".
-The "Criteria" field features a drop-down list containing the four elements for which equality can be tested:
+The rule is divided into two fields: `"Criteria"` and `"Expected Value"`.
+The `"Criteria"` field features a drop-down list containing the four elements for which equality can be tested:
 
 * IP Address of where the ingest request came from
 * Host Name of where the ingest request came from
@@ -41,7 +41,7 @@ The "Criteria" field features a drop-down list containing the four elements for 
 * Context Path that the ingest request arrived on, for example, _/services/catalog_
 
 In order for a rule to evaluate to true and the attributes be applied, the value in the "Expected Value" field must be an exact match to the actual value of the selected criteria.
-For example, if the selected criteria is "IP Address" with an expected value of "192.168.0.1", the rule only evaluates to true for ingest requests coming from "192.168.0.1" and nowhere else.
+For example, if the selected criteria is `"IP Address"` with an expected value of `"192.168.0.1"`, the rule only evaluates to true for ingest requests coming from `"192.168.0.1"` and nowhere else.
 
 .Check for IPv6
 IMPORTANT: Verify your system's IP configuration. Rules using "IP Address" may need to be written in IPv6 format.
