--- a/distribution/docs/src/main/resources/_content/_developing/_devComponents/managed-service-factories.adoc
+++ b/distribution/docs/src/main/resources/_content/_developing/_devComponents/managed-service-factories.adoc
@@ -123,7 +123,7 @@ sizes=D[ \
 ** Long: `L` or `l`
 ** Float: `F` or `f`
 ** Double: `D` or `d`
-* Equal signs (`=`), double quotes (`"`), and spaces within values must must be escaped using a backslash (`\`).
+* Equal signs (`=`), double quotes (`"`), and spaces within values must be escaped using a backslash (`\`).
 * When properties are split over multiple lines for readability, end of lines must be specified with a backslash (`\`). See the examples for lists in the table.
 * A comma (`,`) after the last value in a list is optional.
 * Surrounding the equal signs (`=`) with spaces for properties is optional.
@@ -132,10 +132,10 @@ Because there is a known issue when using OPS4J Pax Exam 4.11.0 and modifying `.
 * Boolean values default to `false` if any value other than `true` is provided.
 * Float values must be representated in the IEEE 754 floating-point "single format" bit layout, preserving Not-a-Number (NaN) values.
 For example, `F"1093140480"` corresponds to `F"10.5"`.
-See the documentation for https://docs.oracle.com/javase/7/docs/api/java/lang/Integer.html#parseInt(java.lang.String)[`java.lang.Integer#parseInt(java.lang.String)`] and https://docs.oracle.com/javase/7/docs/api/java/lang/Float.html#intBitsToFloat(int)[`java.lang.Float#intBitsToFloat(int)`] for more details.
+See the documentation for https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Integer.html#parseInt(java.lang.String)[`java.lang.Integer#parseInt(java.lang.String)`] and https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Float.html#intBitsToFloat(int)[`java.lang.Float#intBitsToFloat(int)`] for more details.
 * Double values must be represented in the IEEE 754 floating-point "double format" bit layout, preserving Not-a-Number (NaN) values.
 For example, `D"4636745974857667812"` corresponds to `D"100.1234"`.
-See the documentation for https://docs.oracle.com/javase/7/docs/api/java/lang/Long.html#parseLong(java.lang.String)[`java.lang.Long#parseLong(java.lang.String)`] and https://docs.oracle.com/javase/7/docs/api/java/lang/Double.html#longBitsToDouble(long)[`java.lang.Double#longBitsToDouble`] for more details.
+See the documentation for https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Long.html#parseLong(java.lang.String)[`java.lang.Long#parseLong(java.lang.String)`] and https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Double.html#longBitsToDouble(long)[`java.lang.Double#longBitsToDouble`] for more details.
 
 ====
 
