--- a/distribution/docs/src/main/resources/_content/_using/using-simple-search-ui.adoc
+++ b/distribution/docs/src/main/resources/_content/_using/using-simple-search-ui.adoc
@@ -1,7 +1,7 @@
 :title: Using the Search UI
 :type: usingIntro
 :status: published
-:parent: Using ${catalog-ui}
+:parent: Using Search UI
 :summary: Using the Simple Search user interface.
 :order: 99
 
