--- a/distribution/docs/src/main/resources/content/_integrating/_endpoints/catalog-rest-endpoint.adoc
+++ b/distribution/docs/src/main/resources/content/_integrating/_endpoints/catalog-rest-endpoint.adoc
@@ -226,7 +226,7 @@ If the metacard or resource is not returned successfully, check for these errors
 |Transformer is invalid, unsupported, or not configured.
 |`<pre>Unable to transform Metacard.  Try different transformer: </pre>`
 |Metacard does not have an associated resource (is metadata only).
-|`<pre>Resource file not available</pre>`
+|`<pre>Resource file is not available</pre>`
 |The resource file/data is not accessible or doesn't exist
 |`<pre>READ failed due to unexpected exception: </pre>`
 |Invalid source ID, or source unavailable.
