--- a/distribution/docs/src/main/resources/content/_managing/_configuring/content-directory-monitor.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/content-directory-monitor.adoc
@@ -111,10 +111,11 @@ A maximum of 8 is imposed to protect system resources.
 
 .Read Lock
 When the CDM is set up, the directory specified is continuously scanned, and files are locked for processing based on the *ReadLock Time Interval*. This does not apply to the *Monitor in place* processing directive. Files are not ingested without having a ReadLock that has observed no change in the file size.
-This is done so that files that are in transit are not ingested prematurely. The interval should be dependent on the speed of the copy to the directory monitor (for example, network drive vs local disk).
+This is done so that files that are in transit are not ingested prematurely. The interval should be dependent on the speed of the copy to the directory monitor (ex. network drive vs local disk).
 For local files, the default value of 500 milliseconds is recommended. The recommended interval for network drives is 1000 - 2000 milliseconds. If the value provided is less than 100, 100 milliseconds is used.
 It is also recommended that the *ReadLock Time Interval* be set to a lower amount of time when the *Maximum Concurrent Files* is set above 1 so that files are
-locked in a timely manner and processed as soon as possible. When a higher *ReadLock Time Interval* is set, the time it takes for files to be processed is increased.
+locked in a timely manner and processed as soon as possible.
+When a higher *ReadLock Time Interval* is set, the time it takes for files to be processed is increased.
 
 .Attribute Overrides
 The CDM supports setting metacard attributes directly when ${branding} ingests a file. Custom overrides are entered in the form:
